Recarga mostrando localStorage y boton borrar localstorage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,10 @@
 </head>
 <body>
   <h1>Chuck Norris Jokes</h1>
-  <button id="fetchJoke">Obtener Chiste</button>
+  <div>
+    <button id="fetchJoke">Obtener Chiste</button>
+    <button id="borrarLista">Borra LocalStore</button>
+  </div>
   <ul id="jokeList"></ul>
 
   <script src="./js/script.js"></script>
